--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ android {
         applicationId "com.example.myapplication"
         minSdkVersion 19
         targetSdkVersion 27
+        buildToolsVersion '27.0.3'
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
